--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,7 @@
     <color name="magnolia">#F3F3FC</color>
     <color name="lavender">#E9E1F9</color>
     <color name="lotion">#FAFCFB</color>
+    <color name="lightSalmonPink">#FFACA3</color>
+    <color name="laurelGreen">#AFCF9D</color>
+
 </resources>
