--- a/app/src/main/res/layout/activity_choose_picture.xml
+++ b/app/src/main/res/layout/activity_choose_picture.xml
@@ -6,15 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".ChoosePicture">
 
-    <ImageView
-        android:id="@+id/ivImageSelected"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/choosePicture_toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/common_full_open_on_phone" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivImageSelected"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/image_view_border"
+        app:layout_constraintDimensionRatio="1:0.8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choosePicture_toolbar"
+        app:srcCompat="@drawable/common_full_open_on_phone"
+        tools:srcCompat="@drawable/ic_image" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,12 +44,22 @@
             android:id="@+id/btnChoosePicture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Choose Picture" />
+            android:text="Select from Gallery"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:background="@drawable/round_button"/>
 
         <Button
             android:id="@+id/btnConfirmImageSelected"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirm" />
+            android:text="Proceed"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:background="@drawable/round_button"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
