--- a/app/src/main/res/layout/activity_similarity_calculation.xml
+++ b/app/src/main/res/layout/activity_similarity_calculation.xml
@@ -6,29 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".SimilarityCalculation">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvSimilarityCalculation"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/similarityCalculation_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="41dp"
-        app:layout_constraintBottom_toTopOf="parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvSimilarityCalculationTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Similarity Calculation"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="16dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSimilarityCalculation"
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/similarityCalculation_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
