--- a/app/src/main/res/layout/activity_spinning_wheel.xml
+++ b/app/src/main/res/layout/activity_spinning_wheel.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".SpinningWheel">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/spinningWheel_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.bluehomestudio.luckywheel.LuckyWheel
         android:id="@+id/lwFoodChoice"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        app:background_color="@color/design_default_color_primary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:background_color="@color/lavender"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Spin"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
