--- a/app/src/main/res/layout/activity_view_restaurant_profile.xml
+++ b/app/src/main/res/layout/activity_view_restaurant_profile.xml
@@ -6,34 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ViewRestaurantProfile">
 
-    <ImageView
-        android:id="@+id/ivBackPress"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
-
-    <View
-        android:id="@+id/viewToolBarLine"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/viewRestaurant_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@+id/ivBackPress"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivRestaurantPicture"
         android:layout_width="match_parent"
         android:layout_height="192dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivBackPress"
+        app:layout_constraintTop_toBottomOf="@+id/viewRestaurant_toolbar"
         app:srcCompat="@android:drawable/ic_menu_report_image" />
 
     <TextView
