--- a/app/src/main/res/layout/spinning_wheel_result_popup_layout.xml
+++ b/app/src/main/res/layout/spinning_wheel_result_popup_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         app:cardCornerRadius="10dp"
         app:strokeWidth="0.2dp"
         app:strokeColor="@color/black">
@@ -21,10 +21,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvPopupTitle"
+                    android:id="@+id/tvPopupTitle_spinningWheelPopup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -35,7 +36,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/tvDistance"
+                    android:id="@+id/tvDistance_spinningWheelPopup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -46,19 +47,19 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/ivPopupPicture"
+                android:id="@+id/ivPopupPicture_spinningWheelPopup"
                 android:layout_width="match_parent"
                 android:layout_height="192dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 app:srcCompat="@android:drawable/ic_menu_report_image" />
 
             <TextView
-                android:id="@+id/tvPopUpAddress"
+                android:id="@+id/tvPopUpAddress_spinningWheelPopup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="Title"
@@ -67,22 +68,13 @@
                 android:textStyle=""/>
 
             <Button
-                android:id="@+id/btnPopUpViewDetails"
+                android:id="@+id/btnPopUpViewDetails_spinningWheelPopup"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="View Details"
                 android:textSize="12dp"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"/>
-
-            <Button
-                android:id="@+id/btnPopUpAddToSpinningWheel"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="Add to Spinning Wheel"
-                android:textSize="12dp"
-                android:textColor="@color/black"
+                android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"/>
 
