--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Map">
         <menu>
@@ -38,21 +39,12 @@
         </menu>
     </item>
 
+    <group android:checkableBehavior="single">
 
-        <item android:title="Profile">
-            <menu>
-                <group android:checkableBehavior="single">
-                    <item
-                        android:title="Profile"
-                        android:id="@+id/nav_profile"
-                        android:icon="@drawable/home_icon"/>
-
-                    <item
-                        android:title="Logout"
-                        android:id="@+id/nav_logout"
-                        android:icon="@drawable/logout_icon"/>
-                </group>
-            </menu>
-        </item>
+        <item
+            android:title="Log Out"
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/logout_icon"/>
+    </group>
 
 </menu>
