Settle Bill Added

--- a/app/src/main/res/drawable-v24/round_button.xml
+++ b/app/src/main/res/drawable-v24/round_button.xml
@@ -4,5 +4,5 @@
     <corners
         android:radius="20dp"/>
 
-    <solid android:color="@color/turquoiseGreen"/>
+    <solid android:color="@color/lightSalmonPink"/>
 </shape>
