--- a/app/src/main/res/layout/activity_add_new_bill_form.xml
+++ b/app/src/main/res/layout/activity_add_new_bill_form.xml
@@ -58,7 +58,7 @@
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:hintTextColor="@color/black"
-                        app:startIconDrawable="@drawable/ic_back"
+                        app:startIconDrawable="@drawable/ic_title"
                         app:startIconTint="@color/black">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -82,7 +82,7 @@
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:hintTextColor="@color/black"
-                        app:startIconDrawable="@drawable/ic_back"
+                        app:startIconDrawable="@drawable/ic_total_amount"
                         app:startIconTint="@color/black">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -90,6 +90,17 @@
                             android:layout_height="match_parent" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
+                    <View
+                        android:id="@+id/viewNameLine"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="@android:color/darker_gray"/>
 
                     <TextView
                         android:id="@+id/tvDate"
@@ -113,6 +124,17 @@
                         android:datePickerMode="spinner"
                         android:spinnersShown="true" />
 
+                    <View
+                        android:id="@+id/viewNameLine2"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="@android:color/darker_gray"/>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -127,7 +149,7 @@
                             android:layout_height="wrap_content"
                             android:text="Paid By :"
                             android:layout_marginRight="10dp"
-                            android:textSize="20dp" />
+                            android:textSize="16dp" />
 
                         <TextView
                             android:id="@+id/tvPaidByName"
@@ -139,6 +161,17 @@
                             android:textSize="20dp"
                             android:textStyle="bold"/>
                     </LinearLayout>
+
+                    <View
+                        android:id="@+id/viewNameLine3"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="@android:color/darker_gray"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -153,14 +186,16 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="People"
-                            android:textSize="20dp" />
+                            android:text="Participants"
+                            android:textSize="16dp" />
 
                         <Button
                             android:id="@+id/btnSelectContact"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="40dp"
+                            android:background="@drawable/round_button"
                             android:layout_weight="1"
+                            android:textColor="@color/black"
                             android:text="Select Contact" />
                     </LinearLayout>
 
@@ -170,24 +205,26 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="6dp"
-                        android:layout_marginEnd="16dp">
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="125dp">
 
                     </androidx.recyclerview.widget.RecyclerView>
-
-                    <Button
-                        android:id="@+id/btnSubmitNewRecord"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="70dp"
-                        android:text="Submit" />
 
                 </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnSubmitNewRecord"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Submit"
+        android:layout_margin="10dp"
+        android:textColor="@color/black"
+        android:background="@drawable/round_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
